# robots-in-morse-using-ros

./: .gitignore  LICENSE.md  README.md
klwr_robot/klwr_bringup/: CMakeLists.txt  package.xml
klwr_robot/klwr_bringup/launch/: start_klwr_in_morse.launch  start_rviz_for_planning.launch
klwr_robot/klwr_description/: CMakeLists.txt  package.xml
klwr_robot/klwr_description/launch/: klwr_description.launch
klwr_robot/klwr_moveit_config/: CMakeLists.txt  package.xml
klwr_robot/klwr_moveit_config/config/: kuka_lwr.srdf
klwr_robot/klwr_moveit_config/launch/: default_warehouse_db.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  start_demo.launch
klwr_robot/klwr_robot/: CMakeLists.txt  package.xml
morse_tools/morse_helpers/: CMakeLists.txt  README.md  package.xml  setup.py
morse_tools/morse_helpers/src/morse_helpers/: __init__.py  adapters.py  arguments.py  morse_local_config.py  settings.py  storage.py
morse_tools/morse_ros_pkgs/morse_comms/: CMakeLists.txt  package.xml
morse_tools/morse_ros_pkgs/morse_comms/action/: CloseGripper.action  OpenGripper.action
morse_tools/morse_ros_pkgs/morse_comms/srv/: GetObjects.srv  PlaceIkTarget.srv  PlaceJoints.srv
morse_tools/morse_ros_pkgs/morse_msgs/: CMakeLists.txt
morse_tools/morse_ros_pkgs/morse_ros/: CMakeLists.txt  package.xml  setup.py
morse_tools/morse_ros_pkgs/morse_ros/src/morse_ros/middleware/: __init__.py  arm_controller.py  gripper_controller.py  platform_controller.py  pose_publisher.py  smart_camera_controller.py
morse_tools/morse_ros_pkgs/morse_ros/tests/: find_object_by_name.py  grasp_an_object.py  list_all_objects.py  move_robot_by_joints.py  place_robot_by_pose.py
morse_tools/morse_ros_pkgs/morse_ros_pkgs/: CMakeLists.txt  package.xml
morse_tools/morse_tools/: CMakeLists.txt  package.xml
pepito_robot/pepito_bringup/launch/: start_moveit_for_robot_in_morse.launch  start_rviz_for_planning.launch
pepito_robot/pepito_description/: package.xml
pepito_robot/pepito_description/urdf/: pepito.urdf  pepito_2.urdf
pepito_robot/pepito_moveit_config/: CMakeLists.txt
pepito_robot/pepito_moveit_config/config/: kinematics.yaml  pepito.srdf
pepito_robot/pepito_moveit_config/launch/: fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  pepito_moveit_controller_manager.launch.xml  planning_pipeline.launch.xml  sensor_manager.launch.xml  start_demo.launch  start_demo_for_robot_in_morse.launch  trajectory_execution.launch.xml
pepito_robot/pepito_robot/: CMakeLists.txt  package.xml
robots/klwr_robot/klwr_description/: .Makefile.kate-swp
robots/klwr_robot/klwr_morse/: CMakeLists.txt  package.xml  setup.py
robots/klwr_robot/klwr_moveit_config/: .setup_assistant  package.xml
robots/klwr_robot/klwr_tools/: CMakeLists.txt
robots/oat_viper_robot/: README.md
robots/oat_viper_robot/adept_s650_bringup/: CMakeLists.txt  package.xml
robots/oat_viper_robot/adept_s650_bringup/launch/: start_moveit_for_robot_in_morse.launch  start_robot_in_morse.sh
robots/oat_viper_robot/adept_s650_morse/: CMakeLists.txt  package.xml
robots/oat_viper_robot/adept_s650_morse/morse/simple_simulation/: default.py  robot_with_gripper.py  viper_with_gripper.py
robots/oat_viper_robot/adept_s650_morse/morse/simple_simulation/data/simple_simulation/props/: objects.blend
robots/oat_viper_robot/adept_s650_morse/morse/simple_simulation/src/simple_simulation/builder/: ort_viper_s650.py
robots/oat_viper_robot/adept_s650_morse/morse/simple_simulation/src/simple_simulation/builder/actuators/: __init__.py  adept_viper.py
robots/oat_viper_robot/adept_s650_morse/morse/simple_simulation/src/simple_simulation/builder/base/actuators/: __init__.py  gripper.py  ort_viper_s650.py
robots/oat_viper_robot/adept_s650_morse/morse/simple_simulation/src/simple_simulation/builder/base/sensors/: __init__.py
robots/oat_viper_robot/adept_s650_morse/morse/simple_simulation/src/simple_simulation/runtime/base/actuators/: gripper.py
robots/oat_viper_robot/adept_s650_morse/morse/simple_simulation/src/simple_simulation/runtime/middleware/: __init__.py  arm_controller.py  ddd.py  gripper_controller.py  joint_trajectory_forwarder.py  pose_publisher.py  state_publisher.py  tf_publisher.py
robots/oat_viper_robot/adept_s650_morse/morse/simple_simulation/src/simple_simulation/runtime/middleware/gripper/: __init__.py  gripper_controller.py
robots/oat_viper_robot/adept_s650_morse/morse/simple_simulation/src/simple_simulation/runtime/middleware/kuka_lwr/: __init__.py  robot_state_publisher.py  trajectory_controller.py
robots/oat_viper_robot/adept_s650_morse/morse/simple_simulation/src/simple_simulation/runtime/middleware/ort_viper_s650/: __init__.py  robot_state_publisher.py  single_joint_controller.py  trajectory_controller.py
robots/oat_viper_robot/adept_s650_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
robots/oat_viper_robot/adept_s650_tools/: package.xml
robots/oat_viper_robot/oat_viper_robot/: CMakeLists.txt  package.xml
robots/pepito_robot/pepito_bringup/: CMakeLists.txt  package.xml
robots/pepito_robot/pepito_description/: CMakeLists.txt
robots/pepito_robot/pepito_morse/: CMakeLists.txt  package.xml
robots/pepito_robot/pepito_moveit_config/: .setup_assistant  package.xml
robots/pepito_robot/pepito_services/: CMakeLists.txt  package.xml
ros_tools/bag_tools/: CMakeLists.txt  package.xml
ros_tools/bag_tools/scripts/: change_topics.py  extract_topics.py  poses_to_path.py  remove_tf.py  rosbag_info_show-metadata.sh
ros_tools/bag_tools/tests/: example_path.bag
ros_tools/node_tools/: CMakeLists.txt  package.xml
ros_tools/node_tools/nodes/: remap_joint_states.py
ros_tools/ros_tools/: CMakeLists.txt  package.xml
ros_tools/teleop_tools/: CMakeLists.txt  package.xml
ros_tools/teleop_tools/docs/: ros-graph.dot
ros_tools/teleop_tools/nodes/: console_teleop.py  manual_pendant.py
(+98 files in other folders)
