<?xml version="1.0"?>
<package>
    <name>pepito_robot</name>

    <version>0.0.1</version>
    <description>
        The pepito_robot package
    </description>
    <maintainer email="dgerod@xyz-lab.org.es">Diego Escudero</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <run_depend>pepito_bringup</run_depend>
    <run_depend>pepito_description</run_depend>
    <run_depend>pepito_moveit_config</run_depend>
    <run_depend>pepito_morse</run_depend>

    <export>
        <metapackage/>
    </export>
</package>
