<package>
  <name>node_tools</name>
  <version>0.0.1</version>
  <description>ROS tools and scripts related to nodes</description>
  <license>BSD</license>
  <maintainer email="dgerod@xyz-lab.org.es">Diego Escudero</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rosbag</build_depend>

  <export>
  </export>
</package>
