<package>
  <name>teleop_tools</name>
  <version>0.0.1</version>
  <description>Tools for tele-operation with teach pendant</description>
  <license>BSD</license>
  <maintainer email="dgerod@xyz-lab.org.es">Diego Escudero</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rosbag</build_depend>
   
  <export>
  </export>
</package>
