<?xml version="1.0"?>
<package>
    <name>morse_msgs</name>
    <version>0.0.0</version>
    <description>Messages used by MORSE.</description>

    <maintainer email="dgerod@xyz-lab.org.es">Diego Escudero</maintainer>
    <author>Diego Escudero</author>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>message_generation</build_depend>
    <run_depend>message_runtime</run_depend>

    <export>
    </export>
</package>
