<?xml version="1.0"?>
<package>
  <name>morse_ros</name>
  <version>0.0.0</version>
  <description>The morse_ros package</description>

  <maintainer email="dgerod@xyz-lab.org.es">Diego Escudero</maintainer>
  <author>Diego Escudero</author>
  <license>TODO</license>
    
  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
