<?xml version="1.0"?>
<package>
    <name>adept_s650_bringup</name>

    <version>0.0.1</version>
    <description>
        The adept viper s650 bringup package
    </description>
    <maintainer email="dgerod@xyz-lab.org.es">Diego Escudero</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

</package>
