<?xml version="1.0"?>
<package>

    <name>adept_s650_tools</name>

    <version>0.0.1</version>
    <description>The adept_s650_tools package</description>
    <maintainer email="dgerod@xyz-lab.org.es">Diego Escudero</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <run_depend>adept_driver</run_depend>
    <run_depend>adept_s650_moveit</run_depend>
    <run_depend>adept_s650_morse</run_depend>

</package>
