<?xml version="1.0"?>
<package>

    <name>oat_viper_robot</name>

    <version>0.0.1</version>
    <description>OAT viper robot package.</description>
    <maintainer email="dgerod@xyz-lab.org.es">Diego Escudero</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <run_depend>adept_s650_support</run_depend>
    <run_depend>adept_s650_moveit_config</run_depend>
    <run_depend>adept_driver</run_depend>

    <export>
        <metapackage/>
    </export>

</package>
